--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/6ac58f8e97.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>CloudNotes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
